add Coordinates class and day 3 part I